--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -108,7 +108,20 @@ h1, h2 {
       margin-bottom: 20px;
       width: 100%;
     }
-
+    .like-btn{
+      width: 35px;
+      height: 30px;
+      margin-left: 20px;
+      color: #808080;
+    }
+    
+    .unlike-btn {
+      width: 35px;
+      height: 30px;
+      margin-left: 20px;
+      background-color: #e54747;
+    }
+    
     .topic-index-icon {
       width: 35px;
       height: 30px;
