--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -7,9 +7,18 @@
            <h2 class="topic-author">
              <%= topic.user.name %>
            </h2>
-           <%= image_tag topic.image.url %>
-           <%= image_tag 'icons/heart-black.png', class: 'topic-index-icon' %>
-           <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
+             <%= image_tag topic.image.url %>
+           <% if !topic.favorite_users.include?(current_user) %>
+            <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
+             <%= image_tag 'icons/heart-black.png', class: 'like-btn' %>
+            <% end %>
+            <% else %>
+             <%= link_to favorites_path(topic_id: topic.id), method: :delete do %>
+              <%= image_tag 'icons/heart-black.png', class: 'unlike-btn' %>
+            <% end %>
+           <% end %>
+           <%= topic.favorite_users.count %>
+            <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
            <p class="topic-text">
              <%= topic.description %>
            </p>
