--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -18,7 +18,9 @@
             <% end %>
            <% end %>
            <%= topic.favorite_users.count %>
+           <%= link_to comments_index_path do %>
             <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
+           <% end %>
            <p class="topic-text">
              <%= topic.description %>
            </p>
