--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -3,13 +3,17 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">コメントの投稿</h1>
-       <%= form_for @topic do |f| %>
+       <%= form_for @comment do |f| %>
+         <div class="form-group">
+            <%= f.hidden_field :user_id, value: @comment.user_id %>
+           <%= f.hidden_field :topic_id, value: @comment.topic_id %>
+         </div>
          <div class="form-group">
            <%= f.label :comment %>
            <%= f.text_area :comment, class: 'form-control' %>
          </div>
          <%if logged_in?%>
-         <%= f.submit '投稿', class: 'btn btn-black btn-block' %>
+           <%= f.submit '投稿', class: 'btn btn-black btn-block' %>
          <% end %>
          
         <% end %>
