--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -18,12 +18,20 @@
             <% end %>
            <% end %>
            <%= topic.favorite_users.count %>
-           <%= link_to comments_index_path do %>
+           <%= link_to comments_new_path(topic_id: topic.id) do %>
             <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
            <% end %>
            <p class="topic-text">
              <%= topic.description %>
            </p>
+           <h3>コメント</h3>
+           <p class="topic-text">
+                <% topic.comments.each do |comment| %>
+                  <p class="topic-text">
+                  <%= comment.comment %>
+                  </p>
+                <% end %>
+              </p>
          </div>
        </div>
      </div>
